--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+
+
+<script id="hydro_config" type="text/javascript">
+    window.Hydro_tagId = "ce84e690-d2d4-4408-bb95-aeb25ae1427f";
+  </script>
+  <script id="hydro_script" src="https://track.hydro.online/"></script>
+
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nova TV</title>
